# PredictiveCodingNetwork

./: .gitignore  new.instr
pcn-cuda-mnist/: CMakeLists.txt  README.md  config.yaml
pcn-cuda-mnist/scripts/: package.sh  run.sh
pcn-cuda-mnist/src/: gpu_check.cu  gpu_check.h  main.cpp  mnist_loader.cpp  mnist_loader.h
pcn-cuda-mnist/src/pcn/: network.cu  network.h
pcn-cuda-mnist/src/ui/: app_window.cpp  app_window.h
